// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TrafficByRadioWidget should render TrafficByRadio snapshot and trend widgets correctly: Snapshot 1`] = `
.c2 {
  width: 16px;
  height: 16px;
}

.c2 path {
  stroke: var(--acx-neutrals-50);
}

.c2 circle {
  fill: var(--acx-neutrals-50);
}

.c0 {
  height: 100%;
  width: 100%;
}

.c0 .ant-card {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-radius: 8px;
  padding: 12px 16px;
  border: 1px solid var(--acx-neutrals-20);
  box-shadow: 0px 2px 4px rgba(51,51,51,0.08);
}

.c0 .ant-card-head {
  padding: 0;
  border-bottom: none;
  min-height: 0;
  margin-bottom: 10px;
}

.c0 .ant-card-head-title {
  padding: 0;
}

.c0 .ant-card-head-title .ant-space .ant-space-item:last-child {
  line-height: 0;
  z-index: 1;
}

.c0 .ant-card-head-wrapper {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.c0 .ant-card-extra {
  padding: 0;
}

.c0 .ant-card-body {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 0;
  font-size: var(--acx-body-4-font-size);
  line-height: var(--acx-body-4-line-height);
}

.c1 {
  font-family: var(--acx-accent-brand-font);
  font-size: var(--acx-headline-4-font-size);
  line-height: var(--acx-headline-4-line-height);
  color: var(--acx-primary-black);
  font-weight: var(--acx-headline-4-font-weight-bold);
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c3 .ant-radio-group {
  border-radius: 20px;
  background-color: var(--acx-neutrals-20);
  vertical-align: top;
  overflow: hidden;
}

.c3 .ant-radio-button-wrapper {
  color: var(--acx-primary-black);
  background-color: transparent;
  border: none;
  box-shadow: none;
  border-radius: 20px;
}

.c3 .ant-radio-button-wrapper:not(:first-child)::before {
  display: none;
}

.c3 .ant-radio-button-wrapper-checked {
  color: var(--acx-primary-white);
  background-color: var(--acx-primary-black);
}

.c3 .ant-radio-button-wrapper span:nth-child(2) {
  vertical-align: middle;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 .ant-radio-button-wrapper:not(.ant-radio-button-wrapper-checked,.ant-radio-button-wrapper-disabled):hover {
  background-color: var(--acx-neutrals-30);
}

.c3 svg {
  vertical-align: middle;
  margin-right: 8px;
}

.c3 path {
  stroke: var(--acx-primary-black);
}

.c3 .ant-radio-button-wrapper-checked path {
  stroke: var(--acx-primary-white);
}

.c3 .ant-radio-button-wrapper-checked {
  cursor: default;
}

.c3 .ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled):hover {
  color: var(--acx-primary-white);
}

.c3 .ant-radio-group-small svg {
  width: var(--acx-body-4-font-size);
  height: var(--acx-body-4-font-size);
}

.c3 .ant-radio-group-small .ant-radio-button-wrapper {
  font-size: var(--acx-body-4-font-size);
  line-height: var(--acx-body-4-line-height);
  height: 24px;
}

.c3 .ant-radio-group-small .ant-radio-button-wrapper span:nth-child(2) {
  margin: 4px 16px;
}

.c3 .ant-radio-group-large svg {
  width: var(--acx-body-3-font-size);
  height: var(--acx-body-3-font-size);
}

.c3 .ant-radio-group-large .ant-radio-button-wrapper {
  font-size: var(--acx-body-3-font-size);
  line-height: var(--acx-body-3-line-height);
  height: 28px;
}

.c3 .ant-radio-group-large .ant-radio-button-wrapper span:nth-child(2) {
  margin: 4px 32px;
}

.c4 {
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

<div>
  <div
    class="c0"
    type="default"
  >
    <div
      class="ant-card"
    >
      <div
        class="ant-card-head"
      >
        <div
          class="ant-card-head-wrapper"
        >
          <div
            class="ant-card-head-title"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center"
            >
              <div
                class="ant-space-item"
                style="margin-right: 4px;"
              >
                <div
                  class="c1"
                >
                  Traffic By Radio
                </div>
              </div>
              <div
                class="ant-space-item"
              >
                <svg
                  class="c2"
                  data-testid="HistoricalOutlined"
                />
              </div>
            </div>
          </div>
          <div
            class="ant-card-extra"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center"
            />
          </div>
        </div>
      </div>
      <div
        class="ant-card-body"
      >
        <div
          style="overflow: visible; height: 0px; width: 0px;"
        >
          <div
            style="display: block; height: 800px; width: 1280px; margin: -38px 0px 0px 0px;"
          >
            <div
              style="text-align: right;"
            >
              <div
                class="c3"
              >
                <div
                  class="ant-radio-group ant-radio-group-outline ant-radio-group-small"
                >
                  <label
                    class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
                  >
                    <span
                      class="ant-radio-button ant-radio-button-checked"
                    >
                      <input
                        checked=""
                        class="ant-radio-button-input"
                        type="radio"
                        value="Snapshot"
                      />
                      <span
                        class="ant-radio-button-inner"
                      />
                    </span>
                    <span>
                      Snapshot
                    </span>
                  </label>
                  <label
                    class="ant-radio-button-wrapper"
                  >
                    <span
                      class="ant-radio-button"
                    >
                      <input
                        class="ant-radio-button-input"
                        type="radio"
                        value="Trend"
                      />
                      <span
                        class="ant-radio-button-inner"
                      />
                    </span>
                    <span>
                      Trend
                    </span>
                  </label>
                </div>
              </div>
            </div>
            <div
              style="overflow: visible; height: 0px; width: 0px;"
            >
              <div
                style="display: block; height: 800px; width: 1280px;"
              >
                <div
                  class="c4"
                >
                  <div
                    style="overflow: visible; height: 0px; width: 0px;"
                  >
                    <div
                      class="ant-space ant-space-vertical"
                    >
                      <div
                        class="ant-space-item"
                      >
                        <div
                          class="echarts-for-react "
                          style="height: 800px; width: 1280px; position: relative;"
                        >
                          <div
                            style="position: relative; overflow: hidden; width: 1280px; height: 800px;"
                          >
                            <svg
                              baseProfile="full"
                              height="800"
                              style="position:absolute;left:0;top:0;user-select:none"
                              version="1.1"
                              width="1280"
                              xmlns="http://www.w3.org/2000/svg"
                              xmlns:xlink="http://www.w3.org/1999/xlink"
                            >
                              <rect
                                fill="none"
                                fill-opacity="1"
                                height="800"
                                id="0"
                                width="1280"
                                x="0"
                                y="0"
                              />
                              <g>
                                <path
                                  d="M392.2088 88.108L392.6034 73.1132L402.6034 73.1132"
                                  fill="none"
                                  stroke="#66B1E8"
                                />
                                <path
                                  d="M375.7912 711.892L375.3966 726.8868L365.3966 726.8868"
                                  fill="none"
                                  stroke="#EC7100"
                                />
                                <path
                                  d="M384 88L384 73L374 73"
                                  fill="none"
                                  stroke="#F9C34B"
                                />
                                <path
                                  d="M384 88A312 312 0 0 1 400.4118 88.4319L397.0453 152.3433A248 248 0 0 0 384 152Z"
                                  fill="#66B1E8"
                                  stroke="#FFFFFF"
                                  stroke-linejoin="round"
                                  stroke-width="2"
                                />
                                <path
                                  d="M400.4118 88.4319A312 312 0 1 1 384 88L384 152A248 248 0 1 0 397.0453 152.3433Z"
                                  fill="#EC7100"
                                  stroke="#FFFFFF"
                                  stroke-linejoin="round"
                                  stroke-width="2"
                                />
                                <path
                                  d="M384 88L384 152Z"
                                  fill="#F9C34B"
                                  stroke="#FFFFFF"
                                  stroke-linejoin="round"
                                  stroke-width="2"
                                />
                                <path
                                  d="M0 -8l6 0l0 16l-6 0Z"
                                  fill="none"
                                  transform="translate(407.6034 73.1132)"
                                />
                                <text
                                  dominant-baseline="central"
                                  fill="#333333"
                                  style="font-size:12px;font-family:'Open Sans', sans-serif;font-weight:400;"
                                  text-anchor="start"
                                  transform="translate(407.6034 73.1132)"
                                  xml:space="preserve"
                                >
                                  263 MB
                                </text>
                                <path
                                  d="M-7 -8l7 0l0 16l-7 0Z"
                                  fill="none"
                                  transform="translate(360.3966 726.8868)"
                                />
                                <text
                                  dominant-baseline="central"
                                  fill="#333333"
                                  style="font-size:12px;font-family:'Open Sans', sans-serif;font-weight:400;"
                                  text-anchor="end"
                                  transform="translate(360.3966 726.8868)"
                                  xml:space="preserve"
                                >
                                  30.4 GB
                                </text>
                                <path
                                  d="M-4 -8l4 0l0 16l-4 0Z"
                                  fill="none"
                                  transform="translate(369 73)"
                                />
                                <text
                                  dominant-baseline="central"
                                  fill="#333333"
                                  style="font-size:12px;font-family:'Open Sans', sans-serif;font-weight:400;"
                                  text-anchor="end"
                                  transform="translate(369 73)"
                                  xml:space="preserve"
                                >
                                  21 B
                                </text>
                                <path
                                  d="M-5 -5l38 0l0 66l-38 0Z"
                                  fill="rgb(0,0,0)"
                                  fill-opacity="0"
                                  stroke="#ccc"
                                  stroke-width="0"
                                  transform="translate(773 372)"
                                />
                                <path
                                  d="M8 4A4 4 0 1 1 8 3.9996"
                                  fill="#66B1E8"
                                  stroke="#FFFFFF"
                                  stroke-linecap="butt"
                                  stroke-linejoin="round"
                                  stroke-miterlimit="10"
                                  stroke-width="0"
                                  transform="translate(773 376)"
                                />
                                <path
                                  d="M13 -4l15 0l0 16l-15 0Z"
                                  fill="none"
                                  transform="translate(773 376)"
                                />
                                <path
                                  d="M13 3.5l8 0l0 1l-8 0Z"
                                  fill="none"
                                  transform="translate(773 376)"
                                />
                                <text
                                  dominant-baseline="central"
                                  fill="#333333"
                                  style="font-size:10px;font-family:'Open Sans', sans-serif;font-weight:400;"
                                  text-anchor="start"
                                  transform="translate(773 376)"
                                  x="13"
                                  xml:space="preserve"
                                  y="4"
                                >
                                  2.4 GHz:
                                </text>
                                <text
                                  dominant-baseline="central"
                                  fill="#333333"
                                  style="font: normal NaN 10px 'Open Sans', sans-serif"
                                  text-anchor="start"
                                  transform="translate(773 376)"
                                  x="21"
                                  xml:space="preserve"
                                  y="4"
                                >
                                   
                                </text>
                                <path
                                  d="M22 3.5l6 0l0 1l-6 0Z"
                                  fill="none"
                                  transform="translate(773 376)"
                                />
                                <text
                                  dominant-baseline="central"
                                  fill="#333333"
                                  style="font-size:10px;font-family:'Open Sans', sans-serif;font-weight:700;"
                                  text-anchor="start"
                                  transform="translate(773 376)"
                                  x="22"
                                  xml:space="preserve"
                                  y="4"
                                >
                                  263 MB
                                </text>
                                <path
                                  d="M8 4A4 4 0 1 1 8 3.9996"
                                  fill="#EC7100"
                                  stroke="#FFFFFF"
                                  stroke-linecap="butt"
                                  stroke-linejoin="round"
                                  stroke-miterlimit="10"
                                  stroke-width="0"
                                  transform="translate(773 396)"
                                />
                                <path
                                  d="M13 -4l14 0l0 16l-14 0Z"
                                  fill="none"
                                  transform="translate(773 396)"
                                />
                                <path
                                  d="M13 3.5l6 0l0 1l-6 0Z"
                                  fill="none"
                                  transform="translate(773 396)"
                                />
                                <text
                                  dominant-baseline="central"
                                  fill="#333333"
                                  style="font-size:10px;font-family:'Open Sans', sans-serif;font-weight:400;"
                                  text-anchor="start"
                                  transform="translate(773 396)"
                                  x="13"
                                  xml:space="preserve"
                                  y="4"
                                >
                                  5 GHz:
                                </text>
                                <text
                                  dominant-baseline="central"
                                  fill="#333333"
                                  style="font: normal NaN 10px 'Open Sans', sans-serif"
                                  text-anchor="start"
                                  transform="translate(773 396)"
                                  x="19"
                                  xml:space="preserve"
                                  y="4"
                                >
                                   
                                </text>
                                <path
                                  d="M20 3.5l7 0l0 1l-7 0Z"
                                  fill="none"
                                  transform="translate(773 396)"
                                />
                                <text
                                  dominant-baseline="central"
                                  fill="#333333"
                                  style="font-size:10px;font-family:'Open Sans', sans-serif;font-weight:700;"
                                  text-anchor="start"
                                  transform="translate(773 396)"
                                  x="20"
                                  xml:space="preserve"
                                  y="4"
                                >
                                  30.4 GB
                                </text>
                                <path
                                  d="M8 4A4 4 0 1 1 8 3.9996"
                                  fill="#F9C34B"
                                  stroke="#FFFFFF"
                                  stroke-linecap="butt"
                                  stroke-linejoin="round"
                                  stroke-miterlimit="10"
                                  stroke-width="0"
                                  transform="translate(773 416)"
                                />
                                <path
                                  d="M13 -4l11 0l0 16l-11 0Z"
                                  fill="none"
                                  transform="translate(773 416)"
                                />
                                <path
                                  d="M13 3.5l6 0l0 1l-6 0Z"
                                  fill="none"
                                  transform="translate(773 416)"
                                />
                                <text
                                  dominant-baseline="central"
                                  fill="#333333"
                                  style="font-size:10px;font-family:'Open Sans', sans-serif;font-weight:400;"
                                  text-anchor="start"
                                  transform="translate(773 416)"
                                  x="13"
                                  xml:space="preserve"
                                  y="4"
                                >
                                  6 GHz:
                                </text>
                                <text
                                  dominant-baseline="central"
                                  fill="#333333"
                                  style="font: normal NaN 10px 'Open Sans', sans-serif"
                                  text-anchor="start"
                                  transform="translate(773 416)"
                                  x="19"
                                  xml:space="preserve"
                                  y="4"
                                >
                                   
                                </text>
                                <path
                                  d="M20 3.5l4 0l0 1l-4 0Z"
                                  fill="none"
                                  transform="translate(773 416)"
                                />
                                <text
                                  dominant-baseline="central"
                                  fill="#333333"
                                  style="font-size:10px;font-family:'Open Sans', sans-serif;font-weight:700;"
                                  text-anchor="start"
                                  transform="translate(773 416)"
                                  x="20"
                                  xml:space="preserve"
                                  y="4"
                                >
                                  21 B
                                </text>
                                <path
                                  d="M-8.5 -5l17 0l0 42l-17 0Z"
                                  fill="rgb(0,0,0)"
                                  fill-opacity="0"
                                  stroke="#ccc"
                                  stroke-width="0"
                                  transform="translate(376.2 384)"
                                />
                                <path
                                  d="M0 0l0 0l0 0l0 0Z"
                                  fill="none"
                                  transform="translate(376.2 384)"
                                />
                                <path
                                  d="M-3.5 4l7 0l0 28l-7 0Z"
                                  fill="none"
                                  transform="translate(376.2 384)"
                                />
                                <text
                                  dominant-baseline="central"
                                  fill="#333333"
                                  style="font-size:24px;font-family:'Open Sans', sans-serif;font-weight:600;"
                                  text-anchor="middle"
                                  transform="translate(376.2 384)"
                                  xml:space="preserve"
                                  y="18"
                                >
                                  30.6 GB
                                </text>
                              </g>
                            </svg>
                          </div>
                          <div
                            class=""
                          />
                          <object
                            class="size-sensor-object"
                            data="about:blank"
                            style="display: block; position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; overflow: hidden; pointer-events: none; z-index: -1; opacity: 0;"
                            tabindex="-1"
                            type="text/html"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="resize-triggers"
                  >
                    <div
                      class="expand-trigger"
                    >
                      <div
                        style="width: 1281px; height: 801px;"
                      />
                    </div>
                    <div
                      class="contract-trigger"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="resize-triggers"
            >
              <div
                class="expand-trigger"
              >
                <div
                  style="width: 1281px; height: 801px;"
                />
              </div>
              <div
                class="contract-trigger"
              />
            </div>
          </div>
        </div>
        <div
          class="resize-triggers"
        >
          <div
            class="expand-trigger"
          >
            <div
              style="width: 1281px; height: 801px;"
            />
          </div>
          <div
            class="contract-trigger"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TrafficByRadioWidget should render TrafficByRadio snapshot and trend widgets correctly: Trend 1`] = `
.c2 {
  width: 16px;
  height: 16px;
}

.c2 path {
  stroke: var(--acx-neutrals-50);
}

.c2 circle {
  fill: var(--acx-neutrals-50);
}

.c0 {
  height: 100%;
  width: 100%;
}

.c0 .ant-card {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-radius: 8px;
  padding: 12px 16px;
  border: 1px solid var(--acx-neutrals-20);
  box-shadow: 0px 2px 4px rgba(51,51,51,0.08);
}

.c0 .ant-card-head {
  padding: 0;
  border-bottom: none;
  min-height: 0;
  margin-bottom: 10px;
}

.c0 .ant-card-head-title {
  padding: 0;
}

.c0 .ant-card-head-title .ant-space .ant-space-item:last-child {
  line-height: 0;
  z-index: 1;
}

.c0 .ant-card-head-wrapper {
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.c0 .ant-card-extra {
  padding: 0;
}

.c0 .ant-card-body {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 0;
  font-size: var(--acx-body-4-font-size);
  line-height: var(--acx-body-4-line-height);
}

.c1 {
  font-family: var(--acx-accent-brand-font);
  font-size: var(--acx-headline-4-font-size);
  line-height: var(--acx-headline-4-line-height);
  color: var(--acx-primary-black);
  font-weight: var(--acx-headline-4-font-weight-bold);
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c3 .ant-radio-group {
  border-radius: 20px;
  background-color: var(--acx-neutrals-20);
  vertical-align: top;
  overflow: hidden;
}

.c3 .ant-radio-button-wrapper {
  color: var(--acx-primary-black);
  background-color: transparent;
  border: none;
  box-shadow: none;
  border-radius: 20px;
}

.c3 .ant-radio-button-wrapper:not(:first-child)::before {
  display: none;
}

.c3 .ant-radio-button-wrapper-checked {
  color: var(--acx-primary-white);
  background-color: var(--acx-primary-black);
}

.c3 .ant-radio-button-wrapper span:nth-child(2) {
  vertical-align: middle;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 .ant-radio-button-wrapper:not(.ant-radio-button-wrapper-checked,.ant-radio-button-wrapper-disabled):hover {
  background-color: var(--acx-neutrals-30);
}

.c3 svg {
  vertical-align: middle;
  margin-right: 8px;
}

.c3 path {
  stroke: var(--acx-primary-black);
}

.c3 .ant-radio-button-wrapper-checked path {
  stroke: var(--acx-primary-white);
}

.c3 .ant-radio-button-wrapper-checked {
  cursor: default;
}

.c3 .ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled):hover {
  color: var(--acx-primary-white);
}

.c3 .ant-radio-group-small svg {
  width: var(--acx-body-4-font-size);
  height: var(--acx-body-4-font-size);
}

.c3 .ant-radio-group-small .ant-radio-button-wrapper {
  font-size: var(--acx-body-4-font-size);
  line-height: var(--acx-body-4-line-height);
  height: 24px;
}

.c3 .ant-radio-group-small .ant-radio-button-wrapper span:nth-child(2) {
  margin: 4px 16px;
}

.c3 .ant-radio-group-large svg {
  width: var(--acx-body-3-font-size);
  height: var(--acx-body-3-font-size);
}

.c3 .ant-radio-group-large .ant-radio-button-wrapper {
  font-size: var(--acx-body-3-font-size);
  line-height: var(--acx-body-3-line-height);
  height: 28px;
}

.c3 .ant-radio-group-large .ant-radio-button-wrapper span:nth-child(2) {
  margin: 4px 32px;
}

.c4 {
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

.c5 {
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 100%;
  padding: 0 16px;
}

.c6 {
  text-align: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
}

.c6 .ant-empty-normal {
  margin: 0;
  margin-block-end: 17px;
}

.c7 {
  font-family: var(--acx-neutral-brand-font);
  font-weight: var(--acx-body-4-font-weight);
  font-size: var(--acx-body-4-font-size);
  line-height: var(--acx-body-4-line-height);
  color: var(--acx-primary-black);
}

<div>
  <div
    class="c0"
    type="default"
  >
    <div
      class="ant-card"
    >
      <div
        class="ant-card-head"
      >
        <div
          class="ant-card-head-wrapper"
        >
          <div
            class="ant-card-head-title"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center"
            >
              <div
                class="ant-space-item"
                style="margin-right: 4px;"
              >
                <div
                  class="c1"
                >
                  Traffic By Radio
                </div>
              </div>
              <div
                class="ant-space-item"
              >
                <svg
                  class="c2"
                  data-testid="HistoricalOutlined"
                />
              </div>
            </div>
          </div>
          <div
            class="ant-card-extra"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center"
            />
          </div>
        </div>
      </div>
      <div
        class="ant-card-body"
      >
        <div
          style="overflow: visible; height: 0px; width: 0px;"
        >
          <div
            style="display: block; height: 800px; width: 1280px; margin: -38px 0px 0px 0px;"
          >
            <div
              style="text-align: right;"
            >
              <div
                class="c3"
              >
                <div
                  class="ant-radio-group ant-radio-group-outline ant-radio-group-small"
                >
                  <label
                    class="ant-radio-button-wrapper"
                  >
                    <span
                      class="ant-radio-button"
                    >
                      <input
                        checked=""
                        class="ant-radio-button-input"
                        type="radio"
                        value="Snapshot"
                      />
                      <span
                        class="ant-radio-button-inner"
                      />
                    </span>
                    <span>
                      Snapshot
                    </span>
                  </label>
                  <label
                    class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
                  >
                    <span
                      class="ant-radio-button ant-radio-button-checked"
                    >
                      <input
                        class="ant-radio-button-input"
                        type="radio"
                        value="Trend"
                      />
                      <span
                        class="ant-radio-button-inner"
                      />
                    </span>
                    <span>
                      Trend
                    </span>
                  </label>
                </div>
              </div>
            </div>
            <div
              style="overflow: visible; height: 0px; width: 0px;"
            >
              <div
                style="display: block; height: 800px; width: 1280px;"
              >
                <div
                  class="c4"
                >
                  <div
                    style="overflow: visible; height: 0px; width: 0px;"
                  >
                    <div
                      class="c5"
                    >
                      <div
                        class="ant-space ant-space-horizontal ant-space-align-center c6 c7"
                      >
                        <div
                          class="ant-space-item"
                        >
                          No data to display
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="resize-triggers"
                  >
                    <div
                      class="expand-trigger"
                    >
                      <div
                        style="width: 1281px; height: 801px;"
                      />
                    </div>
                    <div
                      class="contract-trigger"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="resize-triggers"
            >
              <div
                class="expand-trigger"
              >
                <div
                  style="width: 1281px; height: 801px;"
                />
              </div>
              <div
                class="contract-trigger"
              />
            </div>
          </div>
        </div>
        <div
          class="resize-triggers"
        >
          <div
            class="expand-trigger"
          >
            <div
              style="width: 1281px; height: 801px;"
            />
          </div>
          <div
            class="contract-trigger"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
